Fix missing paging translations

--- a/dc-commons-springmvc/src/main/resources/messages-commons_de.properties
+++ b/dc-commons-springmvc/src/main/resources/messages-commons_de.properties
@@ -4,3 +4,7 @@ error.DEFAULT_MESSAGE=Es ist ein Fehler aufgetreten.
 error.errorCode=Fehlercode:
 error.title=Fehler
 msg.correct_input_errors=Bitte beheben Sie ung\u00fcltige Eingaben.
+pagination.first_page=erste Seite
+pagination.last_page=letzte Seite
+pagination.next_page=n\u00e4chste Seite
+pagination.previous_page=vorherige Seite
