--- a/dc-commons-springmvc/src/main/resources/messages-commons_en.properties
+++ b/dc-commons-springmvc/src/main/resources/messages-commons_en.properties
@@ -4,3 +4,7 @@ error.DEFAULT_MESSAGE=An error occurred.
 error.errorCode=Error code:
 error.title=Error
 msg.correct_input_errors=Correct invalid input, please.
+pagination.first_page=first page
+pagination.last_page=last page
+pagination.next_page=next page
+pagination.previous_page=previous page
