Add improved error pages and their messages

--- a/dc-commons-springmvc/src/main/resources/messages-commons_de.properties
+++ b/dc-commons-springmvc/src/main/resources/messages-commons_de.properties
@@ -1,8 +1,15 @@
 btn_no=Nein
 btn_yes=Ja
-error.DEFAULT_MESSAGE=Es ist ein Fehler aufgetreten.
-error.errorCode=Fehlercode:
-error.title=Fehler
+error.404.button_text=Zur Homepage
+error.404.page_title=Seite nicht gefunden
+error.exception=Exception
+error.message=Fehlernachricht
+error.page_title=Fehler
+error.reason=Fehlerursache
+error.stacktrace=Stacktrace
+error.status_code=Statuscode
+error.timestamp=Fehler-Zeitpunkt
+error.url-path=Aufgerufener URL-Pfad
 msg.correct_input_errors=Bitte beheben Sie ung\u00fcltige Eingaben.
 pagination.first_page=erste Seite
 pagination.last_page=letzte Seite
